--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/output.css">
+    <link rel="stylesheet" href="dist/css/final.css">
     <title>Portfolio</title>
+
+    <script>
+        // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+             document.documentElement.classList.add('dark')
+        } else {
+            document.documentElement.classList.remove('dark')
+        }
+    </script>
 </head>
 <body>
     <!-- Header Start -->
@@ -21,19 +30,31 @@
                         <span class="hamburger transition duration-300 ease-in-out"></span>
                         <span class="hamburger transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:dark:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none dark:bg-dark dark:shadow-green-300">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+                                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-slate-50">Beranda</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base text-dark py-2 mx-8 flex  group-hover:text-primary">Tentang Saya</a>
+                                <a href="#about" class="text-base text-dark py-2 mx-8 flex  group-hover:text-primary dark:text-slate-50">Tentang Saya</a>
                             </li>
                             <li class="group">
-                                <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
+                                <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-slate-50">Portfolio</a>
                             </li>
                             <li class="group">
-                                <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+                                <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-slate-50">Contact</a>
+                            </li>
+                            <li class="flex items-center pl-8 mt-2 lg:mt-0">
+                                <div class="flex">
+                                    <span class="mr-2 text-sm text-slate-500">Light</span>
+                                        <input type="checkbox" name="" id="dark-toggle" class="hidden"/>
+                                        <label for="dark-toggle">
+                                            <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                                                <div class="toggle-circle h-4 w-4 rounded-full bg-white transition duration-500 ease-in-out"></div>
+                                            </div>
+                                        </label>
+                                    <span class="ml-2 text-sm text-slate-500">Dark</span>
+                                </div>
                             </li>
                         </ul>
                     </nav>
@@ -43,20 +64,20 @@
     </header>
     <!-- Header End -->
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36 lg:pt-14 overflow-hidden">
+    <section id="home" class="pt-36 lg:pt-14 overflow-hidden dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2 sm:w-1/2">
-                    <h1 class="text-base font-semibold text-primary ">Selamat Datang! 🖐, saya <span class="block font-bold text-4xl text-dark mt-1 lg:text:5xl">Raden Ridho N.P.M</span></h1>
-                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Mahasiswa | <span class="text-dark">Web Developer</span></h2>
-                    <p class="font-medium text-secondary mb-10 leading-relaxed sm:text-sm justify-center">Belajar web programming itu mudah dan menyenangkan bukan. <span class="text-dark font-bold">Bukan!</span></p>
+                    <h1 class="text-base font-semibold text-primary ">Selamat Datang! 🖐, saya <span class="block font-bold text-4xl text-dark mt-1 lg:text:5xl dark:text-slate-50">Raden Ridho N.P.M</span></h1>
+                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl dakr:text-secondary dark:text-slate-400">Mahasiswa | <span class="text-dark dark:text-white">Web Developer</span></h2>
+                    <p class="font-medium text-secondary dark:text-white mb-10 leading-relaxed sm:text-sm justify-center">Belajar web programming itu mudah dan menyenangkan bukan. <span class="text-dark font-bold dark:text-white">Bukan!</span></p>
 
                     <a href="kontak " class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2 md:w-1/2 md:translate-x-1/4 sm:w-1/2">
                     <div class="relative mt-2 lg:mt-0 lg:right-0">
-                        <img src="img/gono-removebg-preview.png" alt="Raden Ridho" class="max-w-full mx-auto lg:-mt-16 md:-mt-12"/>
-                        <span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
+                        <img src="img/gono-removebg-preview.png" alt="Raden Ridho" class="max-w-full mx-auto lg:-mt-16 md:-mt-12 relative z-10"/>
+                        <span class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="300" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#0F62FE" d="M48.2,-19.1C52,-4.1,37.3,13.5,17.8,28.6C-1.7,43.8,-26,56.5,-44,46.7C-62.1,36.9,-73.8,4.5,-65.5,-16.8C-57.1,-38.2,-28.5,-48.6,-3.2,-47.6C22.2,-46.5,44.4,-34.1,48.2,-19.1Z" transform="translate(100 100)" />
                               </svg>
@@ -69,12 +90,12 @@
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="pt-36 pb-32 dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="text-primary text-2xl font-bold uppercase mb-3 lg:text-lg">Tentang Saya 😁</h4>
-                    <h2 class="text-md font-semibold text-dark mb-4 max-w-md lg:text-3xl">Pengalaman Saya Selama Ngoding! </h2>
+                    <h2 class="text-md font-semibold text-dark mb-4 max-w-md lg:text-3xl dark:text-white">Pengalaman Saya Selama Ngoding! </h2>
                     <p class="text-base text-secondary font-medium max-w-xl">Sehari-hari saya sebenernya tidak hanya ngoding aja. Saya suka bergaul dengan teman-teman saya dan juga dulu saya sering berpergian jauh menggunakan vespa bersama teman-teman saya di komunitas vespa 😁.
                     </p>
                 </div>
@@ -107,13 +128,13 @@
     <!-- About Section End -->
 
     <!-- Portfolio Section Start -->
-    <section id="portfolio" class="pt-36 pb-16 bg-slate-100" >
+    <section id="portfolio" class="pt-36 pb-16  bg-slate-100 dark:bg-slate-600">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Porfolio</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4">Project Yang Pernah Dikerjakan</h2>
-                    <p class="font-medium text-medium text-secondary">Ada beberapa project yang saya kerjakan selama dibangku kuliah. Baik Aplikasi berbasis web dan Aplikasi berbasis desktop.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-4 dark:text-dark">Project Yang Pernah Dikerjakan</h2>
+                    <p class="font-medium text-medium text-secondary dark:text-white">Ada beberapa project yang saya kerjakan selama dibangku kuliah. Baik Aplikasi berbasis web dan Aplikasi berbasis desktop.</p>
                 </div>
             </div>
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
@@ -121,50 +142,50 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/angkringan.png" alt="angkringan" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Aplikasi angkringan menggunakan PHP & Bootstrap</h3>
-                    <p class="font-medium text-base text-secondary">Saya membuat aplikasi angkringan berupa CMS untuk tugas akhir / (Jurnal). Dan Project ini belum selesai yaa guys 😂</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3  dark:text-dark">Aplikasi angkringan menggunakan PHP & Bootstrap</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Saya membuat aplikasi angkringan berupa CMS untuk tugas akhir / (Jurnal). Dan Project ini belum selesai yaa guys 😂</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/dicoding.png" alt="dicoding" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Landing Page</h3>
-                    <p class="font-medium text-base text-secondary">Membuat Landing Page dengan materi dari <a href="https://dicoding.com" target="_blank" class="text-primary">dicoding</a></p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Landing Page</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Membuat Landing Page dengan materi dari <a href="https://dicoding.com" target="_blank" class="text-primary">dicoding</a></p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/mir.png" alt="MirGameStudio" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Landing Page</h3>
-                    <p class="font-medium text-base text-secondary">Membuat project landing page dari hasil magang.</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Landing Page</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Membuat project landing page dari hasil magang.</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/majalaya.png" alt="MajalayaGamelab" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Aplikasi CMS menggunakan PHP & Bootstrap</h3>
-                    <p class="font-medium text-base text-secondary">Saya membuat aplikasi berupa CMS.</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Aplikasi CMS menggunakan PHP & Bootstrap</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Saya membuat aplikasi berupa CMS.</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/datamahasiswa.png" alt="DataMahasiswa" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Aplikasi Data Mahasiswa Menggunakan Bahasa Java</h3>
-                    <p class="font-medium text-base text-secondary">Untuk ini adalah hasil project UJIAN AKHIR saya di semester 5. Menggunakan Software Netbeans</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Aplikasi Data Mahasiswa Menggunakan Bahasa Java</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Untuk ini adalah hasil project UJIAN AKHIR saya di semester 5. Menggunakan Software Netbeans</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/kasir.png" alt="Kasir" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Aplikasi kasir menggunakan PHP & Bootstrap</h3>
-                    <p class="font-medium text-base text-secondary">Saya membuat aplikasi kasir berupa untuk tugas akhir / (Jurnal).</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Aplikasi kasir menggunakan PHP & Bootstrap</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Saya membuat aplikasi kasir berupa untuk tugas akhir / (Jurnal).</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="img/kurirbarang.png" alt="Kurir Barang" class="w-full">
                     </div>
-                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3">Aplikasi Kurir Barang Menggunakan Bahasa Java</h3>
-                    <p class="font-medium text-base text-secondary">Untuk ini adalah hasil project UJIAN AKHIR saya di semester 5. Menggunakan Software Netbeans</p>
+                    <h3 class="font-semi-bold text-xl text-dark mt-5 mb-3 dark:text-dark">Aplikasi Kurir Barang Menggunakan Bahasa Java</h3>
+                    <p class="font-medium text-base text-secondary dark:text-white">Untuk ini adalah hasil project UJIAN AKHIR saya di semester 5. Menggunakan Software Netbeans</p>
                 </div>
             </div>
         </div>
@@ -172,13 +193,13 @@
     <!-- Portfolio Section End -->
 
     <!-- Contact Section Start -->
-    <section id="contact" class="pt-36 pb-32">
+    <section id="contact" class="pt-36 pb-32  dark:bg-dark">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4">Hubungi Kami!</h2>
-                    <p class="font-medium text-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, provident.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-4 dark:text-white">Hubungi Kami!</h2>
+                    <p class="font-medium text-medium text-secondary dark:text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, provident.</p>
                 </div>
             </div>
 
@@ -219,7 +240,7 @@
     <!-- Contact Section End -->
 
     <!-- footer start -->
-    <footer class="bg-dark pt-24 pb-12">
+    <footer class="bg-dark pt-24 pb-12  dark:bg-slate-800">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
@@ -286,6 +307,11 @@
     </footer>
     <!-- footer end -->
 
+    <!-- back to top start -->
+    <a href="#home" id="toTop" class="fixed hidden justify-center items-center h-11 w-11 p-4 bg-primary rounded-full z-[9999] bottom-4 right-4 hover:bg-emerald-400 animate-bounce">
+        <span class="block w-3 h-3 border-t-2 border-l-2 rotate-45 mt-1 hover:border-dark"></span>
+    </a>
+    <!-- back to top end -->
     <script src="dist/js/script.js"></script>
 </body>
 </html>
